--- a/NBA/index-G1.html
+++ b/NBA/index-G1.html
@@ -92,6 +92,16 @@
         color: white;
         cursor: pointer;
     }
+    .sec{
+        font-size: 1.5em;
+        font-weight:bold;
+        color:darkred;
+        background-color: transparent;
+        padding:1vh 2vh 1vh 2vh;
+        margin-top: 1.5vh;
+        border-radius: 5%;
+        border:3px solid darkred;
+    }
 </style>
 
 <body class="bodystyle">
@@ -106,8 +116,19 @@
             </div>
         </div>
         <div class="col-md-6" style="padding:0">
-            <div class="col-md-12" style="padding:0.5vw;font-size: 40px;text-align: center;border-bottom: black 1px solid">
-                <img src="img/G1.png" style="width:80%">
+            <div class="col-md-12" style="border-bottom: black 1px solid">
+                <div class="col-md-10" style="padding:0.5vw;font-size: 40px;text-align: center;">
+                    <img src="img/G1.png" style="width:100%">
+                </div>
+                <div class="col-md-2" style="margin-top: 1vh;">
+                    <select id="sec"  >
+                        <option>第一节</option>
+                        <option>第二节</option>
+                        <option>第三节</option>
+                        <option>第四节</option>
+
+                    </select>
+                </div>
             </div>
             <div class="nav" style="width:100%">
                 <div class="nav-item col-md-2" onclick="location='index-G2.html'">G2</div>
@@ -117,17 +138,9 @@
                 <div class="nav-item col-md-2" onclick="location='index-G6.html'">G6</div>
                 <div class="nav-item col-md-2" onclick="location='index-G7.html'"style="border-right:0">G7</div>
             </div>
-            <div class="col-md-1" style="margin-top: 1vh;">
-                <select id="sec" >
-                    <option>第一节</option>
-                    <option>第二节</option>
-                    <option>第三节</option>
-                    <option>第四节</option>
-
-                </select>
-            </div>
-            <div class="col-md-8 col-md-offset-1" id="main_view" style="padding-left:0;width:100%;height:50vh;background-image: url(img/main_view.png);background-size: auto 50vh;background-repeat:no-repeat";></div>
-            <div class="col-md-12" id="timeline" style="width:100%;height:8vh;border-bottom: black solid 1px"></div>
+            <div class="col-md-12" id="main_view" style="height:49vh;
+            background-image: url(img/main_view.png);background-size: auto 49vh;background-repeat:no-repeat;background-position: center";></div>
+            <div class="col-md-12" id="timeline" style="width:100%;height:9vh;border-bottom: black solid 1px"></div>
             <div class="col-md-4" id="progress" style="height:30vh;border-right: black solid 1px;padding:0;margin-top: -1%"></div>
             <div class="col-md-8">
                 <div class="col-md-12" style="text-align: center;font-size: 20px;font-weight: bold;margin-top:1%">胜率预测曲线</div>
@@ -154,7 +167,6 @@
                    <img id="button_weilianmusi" src="img/photo/qi/weilianmusi.png" onclick="avacli(this.id)" class="avatar">
                    <img id="button_qiongsi" src="img/photo/qi/qiongsi.png" onclick="avacli(this.id)" class="avatar">
                    <img id="button_ouwen" src="img/photo/qi/kaili-ouwen.png" onclick="avacli(this.id)" class="avatar">
-
                </div>
            </div>
             <div class="col-md-12" style="padding:2% 0 2% 0">
@@ -1210,29 +1222,37 @@
         {"name":"香波特","position":[9,0],"team":"骑士","time":"5:10","score":"2"},
         {"name":"琼斯","position":[5,4],"team":"骑士","time":"4:37","score":"2"},
         {"name":"钱宁","position":[7,4],"team":"骑士","time":"3:32","score":"2"},
-        {"name":'利文斯顿',"position":[12,7],"team":"勇士","time":"1:31","score":"2"}
+        {"name":'利文斯顿',"position":[10,7],"team":"勇士","time":"1:31","score":"2"}
     ];
     var dataset2=[];
     var dataset3=[];
     var dataset4=[];
     var dataset=[];
+    var time1=["11:31","10:28","8:54","7:41","7:21","6:32","6:13","5:22","5:10","4:37","3:32","1:31"];
+    var time2=["10:31","10:28","8:54","7:41","7:21","6:32","6:13","5:22","5:10","4:37","3:32","1:31"];
+    var time3=[];
+    var time4=[];
+    var time=time1;
     var sectors=document.getElementById("sec");
     var idx=sectors.selectedIndex;
-    console.log("qwe"+idx);
     if(idx==0){
         dataset=dataset1;
+        time=time1;
     }
     if(idx==1){
         dataset=dataset2;
+        time=time2;
     }
     if(idx==2){
         dataset=dataset3;
+        time=time3;
     }
     if(idx==3){
         dataset=dataset4;
+        time=time4;
     }
     var tim=11.31;
-    var listqi=[];<!--区分骑士勇士数据-->
+    var listqi=[];//<!--区分骑士勇士数据-->
     var listyong=[];
     var flag;<!--区分当前添加的是骑士还是勇士数据-->
     if(dataset[0].team=="骑士") {
@@ -1248,7 +1268,7 @@
     option = {
         timeline: {
             axisType: 'category',
-            data: ["11:31","10:28","8:54","7:41","7:21","6:32","6:13","5:22","5:10","4:37","3:32","1:31"],
+            data: time,
             autoPlay: false,
             x: '0%',
             x2: '3%',
@@ -1266,21 +1286,36 @@
         },
         xAxis: {
             min:0,
-            max:20,
-            show:false,
+            max:15,
+            show:true,
             splitLine:{
                 show:false
             }
         },
         yAxis: {
             min:0,
-            max:10,
-            show:false,
+            max:15,
+            show:true,
             splitLine:{
                 show:false
             }
         },
         series: [
+            {
+                type: 'scatter',
+                symbolSize: 2,
+                data: [0,0],
+                itemStyle : {
+                    normal: {
+                        color: 'black',
+                        opacity:1,
+                        lineStyle: {
+                            type: 'solid'
+                        },
+                        label:{show:false}
+                    }
+                },
+            },
             {
                 type: 'effectScatter',
                 symbolSize: 20,
@@ -1472,7 +1507,7 @@
             xAxis: {
                 min:0,
                 max:15,
-                show:false,
+                show:true,
                 splitLine:{
                     show:false
                 }
@@ -1480,7 +1515,7 @@
             yAxis: {
                 min:0,
                 max:15,
-                show:false,
+                show:true,
                 splitLine:{
                     show:false
                 }
@@ -1620,6 +1655,11 @@
     myChart1.setOption(option1);
     myChart2.setOption(option2)
 </script>
+<!--获取小节下标改变评论以及中间视图-->
+<script>
+
+</script>
+
 
 <script src="js/qiinfor.js"></script>
 <script src="js/yonginfo.js"></script>
